---------------------------------------------------------------------------------------------------
Version: 0.5.6
Date: 2022-02-09
  Features:
    - New setting to enable starting Wolframite in vanilla. (K2 still has by default)
---------------------------------------------------------------------------------------------------
Version: 0.5.5
Date: 2022-02-02
  Changes:
    - More minor compatibility tweaks
---------------------------------------------------------------------------------------------------
Version: 0.5.4
Date: 2022-01-24
  Changes:
    - King Jo's vehicles recipe tweaks
    - K2: Filter dirty water recipe quantity
---------------------------------------------------------------------------------------------------
Version: 0.5.3
Date: 2022-01-16
  Changes:
    - Minor compatibility updates
---------------------------------------------------------------------------------------------------
Version: 0.5.2
Date: 2022-01-10
  Changes:
    - Advanced carbon furnace disabled if Foundry mod is enabled.
    - Minor english text changes
---------------------------------------------------------------------------------------------------
Version: 0.5.1
Date: 2022-01-06
  Changes:
    - pl l10n updates thanks to S3BA
---------------------------------------------------------------------------------------------------
Version: 0.5.0
Date: 2022-01-03
  Changes:
    - Rocket engine nozzle recipe is set as 2 plates here and later modified in other mods.
    - JA l10n updates
    - AAI Vehicles 
---------------------------------------------------------------------------------------------------
Version: 0.4.2
Date: 2021-12-30
  Changes:
    - SE Void probe recipe
    - Graphite compatibility
---------------------------------------------------------------------------------------------------
Version: 0.4.1
Date: 2021-12-05
  Changes:
    - Cargo Ships compatibility
---------------------------------------------------------------------------------------------------