@@ -3,6 +3,7 @@ Version: 0.5.6
 Date: 2022-02-09
   Features:
     - New setting to enable starting Wolframite in vanilla. (K2 still has by default)
+    - Expensive recipe settings now work when K2 enabled
 ---------------------------------------------------------------------------------------------------
 Version: 0.5.5
 Date: 2022-02-02
